<resources>
    <string name="app_name">Numoapps</string>
    <string name="numoapp_title">NumoApps</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_acoount">Tidak punya akun ?</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">DAFTAR</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_monitoring">Monitoring</string>
    <string name="title_articles">Artikel</string>
    <string name="title_settings">Pengaturan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="notification_settings">Pengaturan Notifikasi</string>
    <string name="logout">Logout</string>
    <string name="full_name">Nama lengkap</string>
    <string name="username">Username</string>
    <string name="birthdate">Tanggal lahir</string>
    <string name="birthdate_placeholder">Tanggal Lahir</string>
    <string name="select_birthdate">PILIH TANGGAL LAHIR</string>
    <string name="gender">Jenis kelamin</string>
    <string name="gender_male">Laki-laki</string>
    <string name="gender_female">Perempuan</string>
    <string name="phone_number_hint">Nomor Ponsel (081XXXXXXXXX)</string>
    <string name="email_hint">Alamat email</string>
    <string name="address_hint">Alamat</string>
    <string name="id_card_no_hint">Nomor kartu identitas</string>
    <string name="register">DAFTAR</string>
    <string name="id_card_type">Jenis kartu identitas</string>
    <string name="card_type_ktp">KTP</string>
    <string name="card_type_ktm">KTM</string>
    <string name="gram_unit">gram</string>
    <string name="antropometry">Antropometri</string>
    <string name="body_weight_sample">Berat Badan :</string>
    <string name="number_sample">00</string>
    <string name="kg_unit">kg</string>
    <string name="cm_unit">cm</string>
    <string name="hc_title">LILA :</string>
    <string name="bmi_title">IMT</string>
    <string name="empty_space" />
    <string name="bwi_title">BBI</string>
    <string name="nutrition_status_title">Status Gizi</string>
    <string name="nut_status_sample">Normal</string>
    <string name="body_height_title">Tinggi Badan :</string>
    <string name="kebutuhan_energi">Kebutuhan Energi :</string>
    <string name="energy_unit">Kalori</string>
    <string name="carbo_title">Karbohidrat :</string>
    <string name="percent_unit">%</string>
    <string name="energy_gram_sample">(00 gram)</string>
    <string name="protein_title">Protein :</string>
    <string name="fat_title">Lemak :</string>
    <string name="diet_type_title">Jenis Diet</string>
    <string name="diet_type_sample">Diet Type Sample</string>
    <string name="date_sample">01-01-2021</string>
    <string name="result_sample">Hasil Monitoring</string>
    <string name="article_title_sample">Title</string>
    <string name="save_edit">SIMPAN</string>
    <string name="writer_title">Penulis :</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="change_password_title">GANTI PASSWORD</string>
    <string name="rm_number_hint">Nomor RM</string>
    <string name="rmnut_number_hint">Nomor RM Gizi</string>
    <string name="visitdate_hint">Tanggal kunjungan</string>
    <string name="select_visitdate_hint">PILIH TANGGAL KUNJUNGAN</string>
    <string name="referral_hint">Dokter rujukan</string>
    <string name="age_hint">Umur</string>
    <string name="edu_hint">Pendidikan</string>
    <string name="religion_hint">Agama</string>
    <string name="job_hint">Pekerjaan</string>
    <string name="nip_hint">NIP</string>
    <string name="old_password_hint">Password lama</string>
    <string name="new_password_hint">Password baru</string>
    <string name="forget_password_title">LUPA PASSWORD</string>
    <string name="title_activity_nutritionist">NutritionistActivity</string>
    <string name="phone_number_title">Nomor Ponsel</string>
    <string name="edit_keyword">EDIT</string>
    <string name="delete_keyword">HAPUS</string>
    <string name="title_hint">Judul</string>
    <string name="description_hint">Deskripsi</string>
    <string name="source_hint">Sumber</string>
    <string name="body_weight_hint">Berat Badan</string>
    <string name="body_height_hint">Tinggi Badan</string>
    <string name="hc_hint">Lingkar Kepala (LILA)</string>
    <string name="bwi_hint">Berat Badan Indeks (BBI)</string>
    <string name="fat_hint">Fat</string>
    <string name="visceral_fat_hint">Visceral Fat</string>
    <string name="muscle_hint">Muscle</string>
    <string name="body_age_hint">Body Age</string>
    <string name="gda_hint">GDA</string>
    <string name="gdp_hint">GDP</string>
    <string name="gd2jpp_hint">GD2JPP</string>
    <string name="asam_urat_hint">Asam Urat</string>
    <string name="trigliserida_hint">Trigliserida</string>
    <string name="kolesterol_hint">Kolesterol</string>
    <string name="ldl_hint">LDL</string>
    <string name="hdl_hint">HDL</string>
    <string name="ureum_hint">Ureum</string>
    <string name="kreatinin_hint">Kreatinin</string>
    <string name="sgot_hint">SGOT</string>
    <string name="sgpt_hint">SGPT</string>
    <string name="tensi_hint">Tensi</string>
    <string name="rr_hint">RR</string>
    <string name="suhu_hint">Suhu</string>
    <string name="data_lain_hint">Data Lain</string>
    <string name="oedema_hint">Oedema</string>
    <string name="aktivitas_hint">Aktivitas</string>
    <string name="durasi_olahraga_hint">Durasi Olahraga</string>
    <string name="jenis_olahraga_hint">Jenis Olahraga</string>
    <string name="diagnosa_dahulu_hint">Diagnosa Dahulu</string>
    <string name="nafsu_makan_hint">Nafsu Makan</string>
    <string name="frekuensi_makan_hint">Frekuensi Makan</string>
    <string name="alergi_hint">Alergi</string>
    <string name="makanan_kesukaan_hint">Makanan Kesukaan</string>
    <string name="dietary_title">Dietary</string>
    <string name="dietary_nasi_hint">Dietary Nasi</string>
    <string name="dietary_lauk_hewani_hint">Dietary Lauk Hewani</string>
    <string name="dietary_lauk_nabati_hint">Dietary Lauk Nabati</string>
    <string name="dietary_sayur_hint">Dietary Sayur</string>
    <string name="dietary_sumber_minyak_hint">Dietary Sumber Minyak</string>
    <string name="dietary_minuman_hint">Dietary Minuman</string>
    <string name="dietary_soft_drink_hint">Dietary Soft Drink</string>
    <string name="dietary_jus_hint">Dietary Jus</string>
    <string name="dietary_suplemen_hint">Dietary Suplemen</string>
    <string name="dietary_lain_hint">Dietary Lain</string>
    <string name="energi_hint">Energi</string>
    <string name="keterangan_inter_hint">Keterangan</string>
    <string name="persen_karbohidrat_hint">Persen Karbohidrat</string>
    <string name="persen_protein_hint">Persen Protein</string>
    <string name="persen_lemak_hint">Persen Lemak</string>
    <string name="lihat_data_gizi_title">LIHAT DATA GIZI</string>
    <string name="indeks_massa_tubuh_imt">Indeks Massa Tubuh (IMT)</string>
    <string name="berat_badan_indeks_bbi">Berat Badan Indeks (BBI)</string>
    <string name="diagnosa_sekarang_hint">Diagnosa Sekarang</string>
    <string name="diagnosa_hint">Diagnosa</string>
    <string name="gram_karbohidrat_title">Gram Karbohidrat</string>
    <string name="gram_protein_title">Gram Protein</string>
    <string name="gram_lemak_title">Gram Lemak</string>
    <string name="biochemistry">Biokimia</string>
    <string name="clinic">Klinik</string>
    <string name="dietary">Dietary</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="interenvensi">Interenvensi</string>
    <string name="monitoring">Monitoring</string>
    <string name="title_guide">Panduan</string>
    <string name="return_date_title">Tanggal Kembali</string>
    <string name="choose_return_date">PILIH TANGGAL KEMBALI</string>
    <string name="control_date">Tanggal Kembali : </string>
    <string name="patient_title">PASIEN</string>
    <string name="nutritionist_title">AHLI GIZI</string>
    <string name="source_title">Sumber :</string>
    <string name="edit_article_title">Edit Artikel</string>
    <string name="delete_article_title">Hapus Artikel</string>
    <string name="add_nutrecord_title">TAMBAH DATA GIZI</string>
    <string name="breakfast_title">Makan Pagi</string>
    <string name="time_sample">00:00</string>
    <string name="lunch_title">Makan Siang</string>
    <string name="dinner_title">Makan Malam</string>
    <string name="choose_breakfast_time_title">PILIH JAM MAKAN PAGI</string>
    <string name="choose_lunch_time">PILIH JAM MAKAN SIANG</string>
    <string name="choose_dinner_time">PILIH JAM MAKAN MALAM</string>
    <string name="menu_title">Menu Makanan</string>
    <string name="view_foodmenu_title">LIHAT MENU MAKANAN</string>
    <string name="edit_data_gizi">Edit Data Gizi</string>
    <string name="food_schedule_key">Food Schedule Reminder</string>
    <string name="food_schedule_title">Pengingat Jadwal Makan</string>
    <string name="food_schedule_desc">Pengingat jadwal makan yang sesuai dengan rekomendasi ahli gizi</string>
    <string name="return_schedule_key">Return Schedule Reminder</string>
    <string name="return_schedule_title">Pengingat Jadwal Kembali</string>
    <string name="return_schedule_desc">Pengingat jadwal kembali ke ahli gizi</string>
    <string name="message_hint">Masukkan pesan Anda kepada ahli gizi</string>
    <string name="send_title">KIRIM</string>
    <string name="delete_confirmation">Apakah Anda ingin menghapus data ini ?</string>
    <string name="register_confirmation">Apakah Anda ingin mendaftarkan pasien ini ?</string>
    <string name="patient_visit_title">KUNJUNGAN</string>
    <string name="confirmation_yes">YA</string>
    <string name="confirmation_no">TIDAK</string>
    <string name="age_title">Umur</string>
    <string name="age_year_unit">Tahun</string>
    <string name="return_date_notif">Hari ini adalah jadwal kembali ke Ahli Gizi</string>
    <string name="breakfast_notif">Makan Pagi Anda  : </string>
    <string name="lunch_notif">Makan Siang Anda : </string>
    <string name="dinner_notif">Makan Malam Anda : </string>
    <string name="register_title">DAFTAR</string>
    <string name="patient_list_title">Daftar Pasien</string>
    <string name="login_info">Untuk Ahli Gizi, gunakan tambahan "AG_" beserta username untuk login  (contoh: AG_username)</string>
</resources>
